<resources>
    <string name="app_name">CatChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Catchat</string>
    <string name="nav_header_subtitle">spot@catchat.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_messages">Messages</string>
    <string name="nav_draft">Draftz</string>
    <string name="nav_sent">Sent Messagez</string>
    <string name="nav_trash">In da trash</string>
    <string name="nav_help">Halp</string>
    <string name="nav_feedback">Give us feedbackz</string>
    <string name="nav_support">Support</string>

    <string name="title_messages">This is a messages fragment</string>
    <string name="title_draft">This is a draft fragment</string>
    <string name="title_sent_messages">This is a sent messages fragment</string>
    <string name="title_trash">This is a trash fragment</string>
    <string name="title_help">This is a help activity</string>
    <string name="title_feedback">This is a feedback activity</string>
    <string name="activity_label_halp">Catchat Halp</string>
    <string name="activity_label_feedback">Catchat Feedback</string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
