<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_messages">

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.catchat.ui.messages.MessagesFragment"
        android:label="@string/nav_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_drafts"
        android:name="com.example.catchat.ui.drafts.DraftFragment"
        android:label="@string/nav_draft"
        tools:layout="@layout/fragment_draft" />

    <fragment
        android:id="@+id/nav_sent"
        android:name="com.example.catchat.ui.send.SendFragment"
        android:label="@string/nav_sent"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.example.catchat.ui.trash.TrashFragment"
        android:label="@string/nav_trash"
        tools:layout="@layout/fragment_trash" />

    <activity
        android:id="@+id/nav_feedback"
        android:name="com.example.catchat.FeedbackActivity"
        android:label="@string/nav_feedback"
        tools:layout="@layout/activity_feedback"></activity>
    <activity
        android:id="@+id/nav_help"
        android:name="com.example.catchat.HelpActivity"
        android:label="@string/nav_help"
        tools:layout="@layout/activity_help" />


</navigation>